# OctoPrint-Desktop

./: .gitignore  CMakeLists.txt  README.md
scripts/: OctoPrint-Desktop.desktop  find_leaks
src/: app.c  app.h  config.c  config.h  main.c  psu-menu.c  psu-menu.h  server-menu.c  server-menu.h  temp-menu.c  temp-menu.h
src/octoprint/: client.c  client.h  socket.c  socket.h
